# mobile_STERO-18Z-Fijalkowski-Stolarz

./: CMakeLists.txt  README.md  commands  lab5_config.rviz  old_package.xml  package.xml  rvizconfig.rviz  test.bag
failures/: package.xml
grzesieks/: CMakeLists.txt  task_setter.py
launch/: elektron_world.launch  laser.launch
launch/lab_5/: lab_5.launch
launch/proj_2/: costmap.launch  planner_server.launch
maps/flat1/: flat1.yaml
maps/flat2/: flat2.yaml
maps/map_of_home/: map_of_home.yaml
maps/niesym_corr/: niesym_corr.yaml
maps/simple_corr/: simple_corr.yaml
maps/sym_corr2/: sym_corr2.yaml
maps/symetric_corridor/: symetric_corridor.yaml
matlab/: reading_data.m  session1.bag
matlab/lab4_zad3/: reading_data.m  reading_data.m~  zad3_lab4.bag
matlab/lab4_zad4/lewo/: reading_data.m
matlab/lab4_zad4/prawo/: reading_data.m  zad4_lab4_right.bag
matlab/proj3/diff_drive/: proj3_diff_drive_ahead_error.bag  proj3_diff_drive_rotate.bag  proj3_diff_drive_slide.bag  proj3_diff_drive_slide_error.bag  proj3_diff_drive_slide_error1.bag  proj3_diff_drive_square_error.bag  proj3_diff_drive_turn_error.bag  reading_data.m  reading_data.m~  reading_data_experimental.m
matlab/proj3/laser_scan/: proj3_laser_rotate_error.bag  proj3_laser_slide_error.bag  proj3_laser_square_error.bag  reading_data.m
matlab/proj3/tune_controller/: proj3_tune_ahead_error.bag  proj3_tune_rotate_error.bag  proj3_tune_slide_error.bag  proj3_tune_square_error.bag  reading_data.m  reading_data_experimental.m
matlab/proj3_without_odom/diff_drive/: proj3_diff_drive_slide_error.bag  proj3_diff_drive_square_error.bag  proj3_diff_drive_turn_error.bag  reading_data.m
matlab/proj3_without_odom/laser_scan/: proj3_laser_slide_error.bag  proj3_laser_square_error.bag  proj3_laser_turn_error.bag  reading_data.m
matlab/proj3_without_odom/tune_controller/: proj3_tune_slide_error.bag  proj3_tune_square_error.bag  (+2 more)
msg/: Whisper.msg
old/: CMakeLists.txt
params/proj2/: clear_costmap_recovery_params.yaml  costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  old_not_working_costmap_params.yaml  rotate_recovery_params.yaml
scripts/: README.md  mozg_elektronowy.py  mozg_elektronowy_odom.py  publisher.py  subscriber.py
scripts/lab_1/: mozg_elektronowy_st.py
scripts/lab_2/: mozg_elektronowy_v3.py
scripts/pro_1/: laser_node.py  mozg_elektronowy.py  odom_node.py  problisher.py  pub_square.py  publisher.py  publisher_pro.py
scripts/pro_1_without_odom/: publisher_without.py  task_setter_without.py
scripts/pro_2/: README.md  position_setter.py
scripts/tasty/: tasty_client.py  tasty_pub.py  tasty_server.py  tasty_sub.py
src/: README.md
src/proj2/: alles_maker.cpp  costmap.cpp  costmap_node.cpp  footprint.cpp
srv/: CallItAsUWantIt.srv  Positioning.srv  Positioning2.srv
worlds/: corridor_simple.world  feels_like_home1.world  flat1.world  flat2.world  non_symetric_corridor.world  symetrical_corridor.world
(+7 files in other folders)
