<package>
<name>stero_mobile_init</name>
<version>1.2.4</version>
<description>grzesiekmichal</description>
<maintainer email="grzesiek@gmail.com"> grzesiekmichal </maintainer>
<license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>elektron</run_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
